--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -40,6 +40,12 @@
                 description="分析Git提交">
             <add-to-group group-id="CodeMenu" anchor="last"/>
         </action>
+        <action id="UML.Show"
+                class="team.jlm.coderefactor.plugin.action.ShowUML" text="UML测试"
+                description="UML Test">
+            <add-to-group group-id="CodeMenu" anchor="last"/>
+        </action>
+
     </actions>
     <extensions defaultExtensionNs="com.intellij">
         <toolWindow id="image" secondary="true" icon="AllIcons.General.Modified" anchor="right"
