--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -40,11 +40,16 @@
                 description="Analyse git commits">
             <add-to-group group-id="CodeMenu" anchor="last"/>
         </action>
-
     </actions>
+
+    <applicationListeners>
+        <listener class="team.jlm.coderefactor.plugin.listener.ProjectOpenCloseListener"
+                  topic="com.intellij.openapi.project.ProjectManagerListener"/>
+    </applicationListeners>
+
     <extensions defaultExtensionNs="com.intellij">
         <toolWindow id="image" secondary="true" icon="AllIcons.General.Modified" anchor="right"
                     factoryClass="team.jlm.coderefactor.plugin.ImageWindowFactory"/>
-        <projectService serviceImplementation="team.jlm.coderefactor.plugin.service.AnalyseCacheService"/>
+        <projectService serviceImplementation="team.jlm.coderefactor.plugin.service.CacheService"/>
     </extensions>
 </idea-plugin>
