--- a/micro_client/package.json
+++ b/micro_client/package.json
@@ -13,9 +13,14 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.9",
+    "helpers-utils": "^0.2.3",
+    "insert-css": "^2.0.0",
+    "less-loader": "6",
     "view-design": "^4.7.0",
+    "view-ui-plus": "^1.3.1",
     "vue": "^3.2.13",
-    "vue-grid-layout": "^2.4.0"
+    "vue-grid-layout": "3.0.0-beta1",
+    "vue-router": "4.0.0-beta.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -39,7 +44,8 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
-      "vue/no-mutating-props": 0
+      "vue/no-mutating-props": 0,
+      "vue/multi-word-component-names": "off"
     }
   },
   "browserslist": [
