--- a/micro_client/package.json
+++ b/micro_client/package.json
@@ -1,57 +1,75 @@
 {
-  "name": "micro_client",
-  "version": "0.1.0",
+  "name": "vue-antvx6-demo",
+  "version": "1.0.0",
+  "description": "A Vue.js project",
+  "author": "mary",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "start": "npm run dev",
+    "build": "node build/build.js"
   },
   "dependencies": {
-    "@antv/x6": "^1.33.1",
-    "@antv/x6-vue-shape": "^1.4.2",
+    "@antv/g6": "^4.7.0",
+    "@antv/vis-predict-engine": "^0.1.1",
+    "@antv/x6": "^1.18.3",
+    "@antv/x6-vue-shape": "^1.2.3",
+    "@babel/polyfill": "^7.12.1",
+    "@vue/composition-api": "^1.0.0-rc.6",
     "axios": "^0.27.2",
-    "core-js": "^3.8.3",
-    "element-ui": "^2.15.9",
-    "helpers-utils": "^0.2.3",
     "insert-css": "^2.0.0",
-    "less-loader": "6",
-    "view-design": "^4.7.0",
-    "view-ui-plus": "^1.3.1",
-    "vue": "^3.2.13",
-    "vue-grid-layout": "3.0.0-beta1",
-    "vue-router": "4.0.0-beta.13"
+    "less": "^4.1.1",
+    "view-design": "^4.5.0",
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "@babel/plugin-transform-runtime": "^7.18.10",
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.22.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-stage-2": "^6.22.0",
+    "chalk": "^2.0.1",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.1.4",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^2.30.1",
+    "less": "^4.1.1",
+    "less-loader": "^5.0.0",
+    "node-notifier": "^5.1.2",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "ora": "^1.2.0",
+    "portfinder": "^1.0.13",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.8",
+    "postcss-url": "^7.2.1",
+    "rimraf": "^2.6.0",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.6",
+    "uglifyjs-webpack-plugin": "^1.1.1",
+    "url-loader": "^0.5.8",
+    "vue-loader": "^13.3.0",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.5.2",
+    "webpack": "^3.6.0",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-server": "^2.9.1",
+    "webpack-merge": "^4.1.0"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {
-      "vue/no-mutating-props": 0,
-      "vue/multi-word-component-names": "off"
-    }
+  "engines": {
+    "node": ">= 6.0.0",
+    "npm": ">= 3.0.0"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not dead",
-    "not ie 11"
+    "not ie <= 8"
   ]
 }
