--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -55,15 +55,9 @@
     <extensions defaultExtensionNs="com.intellij">
         <toolWindow id="image" secondary="true" icon="AllIcons.General.Modified" anchor="right"
                     factoryClass="team.jlm.coderefactor.plugin.ImageWindowFactory"/>
+        <toolWindow id="dependenciesToolWindow" secondary="true"  icon="AllIcons.Actions.ForceRefresh" anchor="bottom"
+                    factoryClass="team.jlm.coderefactor.plugin.ui.DependencyToolWindowFactory"/>
         <projectService serviceImplementation="team.jlm.coderefactor.plugin.service.CommitsAnalyseCacheService"/>
-        <localInspection language="JAVA"
-                         displayName="Test inspection"
-                         groupPath="Java"
-                         groupKey="group.names.probable.bugs"
-                         groupBundle="messages.InspectionsBundle"
-                         level="WARNING"
-                         enabledByDefault="true"
-                         implementationClass="team.jlm.coderefactor.plugin.inspection.TestInspection"/>
         <localInspection language="JAVA"
                          displayName="Cycle dependency between two files"
                          groupPath="Java"
