fix(依赖图): fix NullPointerException

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -47,7 +47,7 @@
         </action>
         <action id="CycleDependencyOnOneClassAction"
                 class="team.jlm.coderefactor.plugin.action.CycleDependencyOnOneClassAction"
-                text="本类的循环依赖分析" description="CycleDependencyOnOneClassAction">
+                text="本类的循环依赖分析 (todo....)" description="CycleDependencyOnOneClassAction">
             <add-to-group group-id="CodeMenu" anchor="last"/>
         </action>
     </actions>
