feature(make static): 增加将方法转为静态的重构操作

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -50,6 +50,11 @@
                 text="本类的循环依赖分析 (todo....)" description="CycleDependencyOnOneClassAction">
             <add-to-group group-id="CodeMenu" anchor="last"/>
         </action>
+        <action id="MakeMethodStaticAction"
+                class="team.jlm.coderefactor.plugin.action.MakeMethodStaticAction"
+                text="Test Only Make Method Static" description="MakeMethodStaticAction">
+            <add-to-group group-id="CodeMenu" anchor="last"/>
+        </action>
     </actions>
 
     <applicationListeners>
